# comparator-zbx.shpt

./: .gitignore  Cargo.toml  relatorio.txt
src/: config.rs  error.rs  lib.rs  main.rs
src/models/: common.rs  mod.rs  sharepoint.rs  zabbix.rs
src/parsers/: csv_parser.rs  mod.rs  zabbix_parser.rs
src/reports/: discrepancy.rs  mod.rs  summary.rs
src/services/: aggregator.rs  comparator.rs  data_loader.rs  mod.rs
src/utils/: mod.rs  normalizer.rs
